--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-hooks": "^1.0.1",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
