--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.4",
